<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@drawable/default_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout02"
            android:layout_width="wrap_content"
            android:layout_height="232dp"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="200dp"
            android:background="@drawable/login_back"
            android:paddingBottom="10.0px"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/faceImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_head" />

            <EditText
                android:id="@+id/et_login_jwgl_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_toRightOf="@+id/faceImg"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputAccHint"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_login_jwgl_account"
                android:layout_alignLeft="@+id/et_login_jwgl_account"
                android:layout_alignTop="@+id/et_login_jwgl_account"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <EditText
                android:id="@+id/et_login_jwgl_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_login_jwgl_account"
                android:layout_alignRight="@+id/et_login_jwgl_account"
                android:layout_below="@+id/et_login_jwgl_account"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/qq_edit_login"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_login_jwgl_password"
                android:layout_alignRight="@+id/TextView01"
                android:layout_alignTop="@+id/et_login_jwgl_password"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <EditText
                android:id="@+id/et_login_jwgl_checkcode"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_login_jwgl_password"
                android:layout_below="@+id/et_login_jwgl_password"
                android:background="@drawable/qq_edit_login"
                android:maxLength="5"
                android:paddingLeft="58.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/et_login_jwgl_checkcode"
                android:layout_alignLeft="@+id/TextView02"
                android:layout_alignTop="@+id/et_login_jwgl_checkcode"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/str_checkCode"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <CheckBox
                android:id="@+id/cb_login_jwgl_remember_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/ib_login_jwgl_login"
                android:button="@drawable/qq_btn_check"
                android:checked="true"
                android:paddingLeft="25.0px"
                android:text="@string/opt_remember"
                android:textColor="#ff222222"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/ib_login_jwgl_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/TextView03"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="7.0px"
                android:text="@string/login" />

            <ImageView
                android:id="@+id/iv_login_jwgl_checkcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/check_bg"
                android:layout_above="@+id/ib_login_jwgl_login"
                android:layout_alignRight="@+id/ib_login_jwgl_login"
                android:layout_below="@+id/faceImg"
                android:layout_toRightOf="@+id/et_login_jwgl_checkcode"
                android:minHeight="20dp"
                android:minWidth="40dp"
                android:onClick="flushCheckCode"
                android:padding="3dp"
                android:paddingLeft="5dp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>